# gh-pages-cli

./: .gitignore  LICENSE  pyproject.toml  setup.cfg
.todo/: done.txt  todo.txt
ghp/: __init__.py  app.py  cli.py  downloadable.py  objects.py  requests.py  states.py  types.py
tests/: conftest.py  test_app.py  test_ghp.py  test_objects.py  test_requests.py  test_states.py  test_types.py
tests/data/: pages.json
