[tool.poetry]
name = "ghp"
version = "0.1.2"
description = "CLI utility for querying the Github API for status of Pages/Actions"
authors = ["Alissa Huskey <alissa.huskey@gmail.com>"]
license = "MIT"
repository = "https://github.com/alissa-huskey/gh-pages-cli"
homepage = "https://github.com/alissa-huskey/gh-pages-cli"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
tabulate = "^0.8.7"
ipython = "^7.19.0"
more_itertools = "^8.6.0"
blessed = "^1.17.12"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
status = "ghp.cli:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
